--- a/pages/mas_vistos.html
+++ b/pages/mas_vistos.html
@@ -24,63 +24,68 @@
             </ul>
         </nav>
     </header>
+    <div class="barra-buscar container">
+        <form class="d-flex justify-content-center" role="search">
+            <input class="form-control me-2" type="search" placeholder="Busca un libro" aria-label="Search">
+            <button class="btn btn-outline-warning" type="submit">Buscar</button>
+    </div>
     <main>
         <section>
             <h2 class="h2-titulos">Los mas vistos</h2>
             <h3 class="h3-titulos">Semana</h3>
                 <ul>
                     <li>
-                        <img src="" alt="">
+                        <img src="../assets/señordelosanillos.png" alt="libro señor de los anillos">
                         <p></p>
                     </li>
                     <li>
-                        <img src="" alt="">
+                        <img src="../assets/arthas.png" alt="libro arthas">
                         <p></p>
                     </li>
                     <li>
-                        <img src="" alt="">
+                        <img src="../assets/bajolamismaestrella.jpg" alt="libro balo la misma estrella">
                         <p></p>
                     </li>
                     <li>
-                        <img src="" alt="">
+                        <img src="../assets/harrypotter.png" alt="libro harry potter">
                         <p></p>
                     </li>
                 </ul>
             <h3 class="h3-titulos">Mes</h3>
             <ul>
                 <li>
-                    <img src="" alt="">
+                    <img src="../assets/xmen.png" alt="libro xmen">
                     <p></p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="../assets/elprincipito.jpg" alt="libro el principito">
                     <p></p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="../assets/problematrescuerpos.png" alt=" libro problema de los tres cuerpos">
                     <p></p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="../assets/bajolamismaestrella.jpg" alt="libro bajo la misma estrella">
                     <p></p>
                 </li>
             </ul>
             <h3 class="h3-titulos">Año</h3>
             <ul>
                 <li>
-                    <img src="" alt="">
+                    <img src="../assets/arthas.png" alt="libro arthas">
                     <p></p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="../assets/librodune.jpg" alt="libro dune">
                     <p></p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="../assets/harrypotter.png" alt="libro harry potter">
                     <p></p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="../assets/xmen.png" alt="libro xmen">
                     <p></p>
                 </li>
             </ul>
