index y mas vistos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="logo-header" href="./index.html">
-                    <img src="./assets/logo.png" alt="logo de la pagina" title="logo de la pagina letra l con fuego">
+                    <img src="./assets/logo.png" alt="logo de la pagina" title="lectura libre">
                 </a>    
                 <h1 class="nombre-pagina">Lectura Libre</h1>
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
