--- a/pages/mas_vistos.html
+++ b/pages/mas_vistos.html
@@ -42,64 +42,64 @@
         <div class="section123 d-flex flex-column">
             <section>
                 <h3 class="h3-titulos text-center">Semana</h3>
-                    <ul class="d-flex flex-wrap justify-content-center list-unstyled">
-                        <li>
+                    <ul class="mas-vistos-semana d-flex flex-wrap justify-content-center list-unstyled">
+                        <li class="d-flex flex-wrap justify-content-center">
                             <img class="rounded" src="../assets/señordelosanillos.png" alt="libro señor de los anillos">
-                            <p></p>
+                            <p class="d-flex align-items-center">En Las dos torres, la segunda parte de la trilogía El Señor de los Anillos de J.R.R. Tolkien, los personajes se enfrentan a desafíos cruciales en sus respectivas misiones. Frodo y Sam avanzan hacia Mordor con el Anillo Único, mientras que Aragorn, Legolas y Gimli luchan contra las fuerzas de Saruman en la épica batalla de Helm's Deep.  </p>
                         </li>
-                        <li>
+                        <li class="d-flex flex-wrap justify-content-center">
                             <img class="rounded" src="../assets/arthas.png" alt="libro arthas">
-                            <p></p>
+                            <p class="d-flex align-items-center">Arthas: La Ascensión del Rey Exánime de Christie Golden narra la transformación del noble príncipe Arthas Menethil en el temido Rey Exánime. La novela explora su descenso a la oscuridad mientras busca salvar su reino de una plaga devastadora, convirtiéndose en el líder de los muertos vivientes.</p>
                         </li>
-                        <li>
-                            <img class="rounded" src="../assets/bajolamismaestrella.jpg" alt="libro balo la misma estrella">
-                            <p></p>
+                        <li class="d-flex flex-wrap justify-content-center">
+                            <img class="rounded" src="../assets/bajolamismaestrella.jpg" alt="libro bajo la misma estrella">
+                            <p>"Bajo la misma estrella" de John Green narra la historia de Hazel y Augustus, dos adolescentes con cáncer que se enamoran mientras enfrentan sus enfermedades y exploran el significado de la vida y la muerte. Es un relato conmovedor sobre el amor, la pérdida y la lucha por dejar una huella en el mundo.</p>
                         </li>
-                        <li>
+                        <li class="d-flex flex-wrap justify-content-center">
                             <img class="rounded" src="../assets/harrypotter.png" alt="libro harry potter">
-                            <p></p>
+                            <p>"Harry Potter y la piedra filosofal" de J.K. Rowling sigue las aventuras de Harry, un niño huérfano que descubre que es un mago, mientras asiste a la escuela Hogwarts y enfrenta los misterios de su pasado, incluyendo su conexión con el malvado Voldemort. Es el comienzo de su viaje en un mundo mágico lleno de amistades, peligros y descubrimientos.</p>
                         </li>
                     </ul>
             </section>
             <section>
                 <h3 class="h3-titulos text-center">Mes</h3>
                 <ul class="d-flex flex-wrap justify-content-center list-unstyled">"
-                    <li>
+                    <li class="d-flex flex-wrap justify-content-center">
                         <img class="rounded" src="../assets/xmen.png" alt="libro xmen">
-                        <p></p>
+                        <p>X-Men: Heir of Apocalypse sigue a un grupo de mutantes que se enfrentan a una nueva amenaza cuando el temido villano Apocalipsis regresa con un heredero que busca imponer su dominio. La historia combina acción intensa y desafíos épicos mientras los X-Men luchan para proteger el mundo de una inminente catástrofe.</p>
                     </li>
-                    <li>
+                    <li class="d-flex flex-wrap justify-content-center">
                         <img class="rounded" src="../assets/elprincipito.jpg" alt="libro el principito">
-                        <p></p>
+                        <p>El Principito, escrito por Antoine de Saint-Exupéry, es una fábula que cuenta la historia de un pequeño príncipe que viaja de planeta en planeta, encontrando personajes que representan distintas facetas de la naturaleza humana. A través de sus aventuras, el libro explora temas profundos sobre la amistad, el amor y la esencia de lo que realmente importa en la vida.</p>
                     </li>
-                    <li>
+                    <li class="d-flex flex-wrap justify-content-center">
                         <img class="rounded" src="../assets/problematrescuerpos.png" alt=" libro problema de los tres cuerpos">
-                        <p></p>
+                        <p>"El problema de los tres cuerpos" de Liu Cixin es una novela de ciencia ficción que explora el primer contacto de la humanidad con una civilización extraterrestre a través de un videojuego que simula un sistema planetario caótico. La historia mezcla ciencia, historia y filosofía mientras plantea preguntas sobre el destino de la humanidad frente a una amenaza cósmica.</p>
                     </li>
-                    <li>
+                    <li class="d-flex flex-wrap justify-content-center">
                         <img class="rounded" src="../assets/bajolamismaestrella.jpg" alt="libro bajo la misma estrella">
-                        <p></p>
+                        <p>"Bajo la misma estrella" de John Green es una novela que sigue a Hazel, una joven con cáncer, mientras se enamora de Augustus, un chico con una visión única de la vida. Juntos, enfrentan el dolor, la enfermedad y la búsqueda de un propósito en un mundo lleno de incertidumbres.</p>
                     </li>
                 </ul>
             </section>
             <section>
                 <h3 class="h3-titulos text-center">Año</h3>
                 <ul class="d-flex flex-wrap justify-content-center list-unstyled">
-                    <li>
+                    <li class="d-flex flex-wrap justify-content-center">
                         <img class="rounded" src="../assets/arthas.png" alt="libro arthas">
-                        <p></p>
+                        <p>Arthas: La Ascensión del Rey Exánime de Christie Golden narra la transformación del noble príncipe Arthas Menethil en el temido Rey Exánime. La novela explora su descenso a la oscuridad mientras busca salvar su reino de una plaga devastadora, convirtiéndose en el líder de los muertos vivientes.</p>
                     </li>
-                    <li>
+                    <li class="d-flex flex-wrap justify-content-center">
                         <img class="rounded" src="../assets/librodune.jpg" alt="libro dune">
-                        <p></p>
+                        <p>"Dune" de Frank Herbert es una épica de ciencia ficción que sigue a Paul Atreides, un joven noble cuya familia asume el control del desértico planeta Arrakis, el único lugar donde se produce la especia, una sustancia vital en el universo. La novela explora temas de poder, religión, ecología y destino mientras Paul se enfrenta a traiciones y descubre su papel en un profético conflicto galáctico.</p>
                     </li>
-                    <li>
+                    <li class="d-flex flex-wrap justify-content-center">
                         <img class="rounded" src="../assets/harrypotter.png" alt="libro harry potter">
-                        <p></p>
+                        <p>"Harry Potter y la piedra filosofal" de J.K. Rowling sigue las aventuras de Harry, un niño huérfano que descubre que es un mago, mientras asiste a la escuela Hogwarts y enfrenta los misterios de su pasado, incluyendo su conexión con el malvado Voldemort. Es el comienzo de su viaje en un mundo mágico lleno de amistades, peligros y descubrimientos.</p>
                     </li>
-                    <li>
+                    <li class="d-flex flex-wrap justify-content-center">
                         <img class="rounded" src="../assets/xmen.png" alt="libro xmen">
-                        <p></p>
+                        <p>X-Men: Heir of Apocalypse sigue a un grupo de mutantes que se enfrentan a una nueva amenaza cuando el temido villano Apocalipsis regresa con un heredero que busca imponer su dominio. La historia combina acción intensa y desafíos épicos mientras los X-Men luchan para proteger el mundo de una inminente catástrofe.</p>
                     </li>
                 </ul>
             </section>
