agregue assets, termine mas vistos y avance en novedades

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -38,34 +38,51 @@
         </form>
     </div>
     <main>
-        <section>
-            <h2 class="h2-titulos">Próximos Lanzamientos</h2>
-            <ul>
-                <li><img src="" alt="Próximo lanzamiento 1"></li>
-                <li><img src="" alt="Próximo lanzamiento 2"></li>
-                <li><img src="" alt="Próximo lanzamiento 3"></li>
-                <li><img src="" alt="Próximo lanzamiento 4"></li>
-                <li><img src="" alt="Próximo lanzamiento 5"></li>
-                <li><img src="" alt="Próximo lanzamiento 6"></li>
-            </ul>
-        </section> 
-        <section>       
-            <h2 class="h2-titulos">Noticias</h2>
-            <ul>
-                <li>
-                    <img src="" alt="Noticia 1">
-                    <p>Texto de la noticia 1</p>
-                </li>
-                <li>
-                    <img src="" alt="Noticia 2">
-                    <p>Texto de la noticia 2</p>
-                </li>
-                <li>
-                    <img src="" alt="Noticia 3">
-                    <p>Texto de la noticia 3</p>
-                </li>
-            </ul>
-        </section> 
+        <h2 class="h2-titulos text-center">Próximos Lanzamientos</h2>
+        <div class="section123 d-flex flex-column">
+            <section>
+                <ul class="d-flex flex-wrap justify-content-center list-unstyled">
+                    <li class="d-flex flex-wrap justify-content-center">
+                        <img class="rounded" src="../assets/libronegro.jpg" alt="Próximo lanzamiento 1">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, doloribus porro dolorum possimus error impedit dignissimos? Illum cumque expedita consequatur excepturi quos consequuntur architecto quas fugiat fugit. Corrupti, architecto earum!</p>
+                    </li>
+                    <li class="d-flex flex-wrap justify-content-center">
+                        <img class="rounded" src="../assets/chicadenieve.jpg" alt="Próximo lanzamiento 2">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, doloribus porro dolorum possimus error impedit dignissimos? Illum cumque expedita consequatur excepturi quos consequuntur architecto quas fugiat fugit. Corrupti, architecto earum!</p>
+                    </li>
+                    <li class="d-flex flex-wrap justify-content-center">
+                        <img class="rounded" src="../assets/cronica.jpg" alt="Próximo lanzamiento 3">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, doloribus porro dolorum possimus error impedit dignissimos? Illum cumque expedita consequatur excepturi quos consequuntur architecto quas fugiat fugit. Corrupti, architecto earum!</p>
+                    </li>
+                    <li class="d-flex flex-wrap justify-content-center">
+                        <img class="rounded" src="../assets/eldesorden.jpg" alt="Próximo lanzamiento 4">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, doloribus porro dolorum possimus error impedit dignissimos? Illum cumque expedita consequatur excepturi quos consequuntur architecto quas fugiat fugit. Corrupti, architecto earum!</p>
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <h2 class="h2-titulos text-center">Noticias Semanales</h2>
+        <div class="section-novedades d-flex flex-column">
+            <section>
+                <ul class="d-flex flex-wrap justify-content-center list-unstyled">
+                    <li class="d-flex flex-column align-items-center">
+                        <h3 class="text-center">Murió Leonard Riggio, quien forjó un imperio con Barnes & Noble</h3>
+                        <img src="../assets/noticia1.jpg" alt="Noticia 1">
+                        <p>Leonard Riggio, quien transformó la industria editorial al crear Barnes & Noble y se convirtió en el librero más poderoso de Estados Unidos antes de que su empresa fuera superada por el auge de Amazon, murió a los 83 años.</p>
+                    </li>
+                    <li class="d-flex flex-column align-items-center">
+                        <h3 class="text-center">Julio Cortázar a los 110 años: una ruta con los mejores libros para entrar en su universo</h3>
+                        <img src="../assets/noticia2.jpg" alt="Noticia 2">
+                        <p>Nacido un 26 de agosto de 1914, el argentino fue un escritor con una obra muy particular y creativa. A veces densa, pero exquisitamente literaria, su narrativa sigue siendo un imperdible. En Culto lo recordamos con una guía breve para comenzar a leerlo sin fracasar en el intento.</p>
+                    </li>
+                    <li class="d-flex flex-column align-items-center">
+                        <h3 class="text-center">Los libros de la semana y el ranking de bestsellers de agosto</h3>
+                        <img src="../assets/noticia3.jpg" alt="Noticia 3">
+                        <p>Una novela norteamericana que llega con las mejores recomendaciones y un policial escrito por un experto. Además, los títulos más vendidos.</p>
+                    </li>
+                </ul>
+            </section>
+        </div>    
     </main>          
     <footer>
         <a href="https://www.Twitter.com" target="_blank"><img src="../assets/twitterlogo.png" alt="twitter logo"></a>
