--- a/pages/mas_vistos.html
+++ b/pages/mas_vistos.html
@@ -45,11 +45,11 @@
                     <ul class="mas-vistos-semana d-flex flex-wrap justify-content-center list-unstyled">
                         <li class="d-flex flex-wrap justify-content-center">
                             <img class="rounded" src="../assets/señordelosanillos.png" alt="libro señor de los anillos">
-                            <p class="d-flex align-items-center">En Las dos torres, la segunda parte de la trilogía El Señor de los Anillos de J.R.R. Tolkien, los personajes se enfrentan a desafíos cruciales en sus respectivas misiones. Frodo y Sam avanzan hacia Mordor con el Anillo Único, mientras que Aragorn, Legolas y Gimli luchan contra las fuerzas de Saruman en la épica batalla de Helm's Deep.  </p>
+                            <p class="d-flex">En Las dos torres, la segunda parte de la trilogía El Señor de los Anillos de J.R.R. Tolkien, los personajes se enfrentan a desafíos cruciales en sus respectivas misiones. Frodo y Sam avanzan hacia Mordor con el Anillo Único, mientras que Aragorn, Legolas y Gimli luchan contra las fuerzas de Saruman en la épica batalla de Helm's Deep.  </p>
                         </li>
                         <li class="d-flex flex-wrap justify-content-center">
                             <img class="rounded" src="../assets/arthas.png" alt="libro arthas">
-                            <p class="d-flex align-items-center">Arthas: La Ascensión del Rey Exánime de Christie Golden narra la transformación del noble príncipe Arthas Menethil en el temido Rey Exánime. La novela explora su descenso a la oscuridad mientras busca salvar su reino de una plaga devastadora, convirtiéndose en el líder de los muertos vivientes.</p>
+                            <p class="d-flex">Arthas: La Ascensión del Rey Exánime de Christie Golden narra la transformación del noble príncipe Arthas Menethil en el temido Rey Exánime. La novela explora su descenso a la oscuridad mientras busca salvar su reino de una plaga devastadora, convirtiéndose en el líder de los muertos vivientes.</p>
                         </li>
                         <li class="d-flex flex-wrap justify-content-center">
                             <img class="rounded" src="../assets/bajolamismaestrella.jpg" alt="libro bajo la misma estrella">
