rehice form en contacto, modifique footer

--- a/index.html
+++ b/index.html
@@ -108,10 +108,12 @@
         </div>
     </main>
     <footer>
-        <div>
+        <div class=" iconos-footer d-flex justify-content-center">
             <a href="https://www.Twitter.com" target="_blank"><img src="./assets/twitterlogo.png" alt="twitter logo"></a>
             <a href="https://www.facebook.com" target="_blank"><img src="./assets/facebooklogo.png" alt="facebook logo"></a>
             <a href="https://www.youtube.com" target="_blank"><img src="./assets/youtubelogo.png" alt="youtube logo"></a>
+        </div>
+        <div class="d-flex justify-content-center">
             <p>Todos los derechos reservados &copy; 2024</p>
         </div>
     </footer>
