--- a/pages/generos.html
+++ b/pages/generos.html
@@ -37,8 +37,8 @@
             <button class="btn btn-outline-warning" type="submit">Buscar</button>
         </form>
     </div>
-        <main class="main-generos">
-        <section>
+    <main class="main-generos">
+    <section>
             <h2 class="h2-titulos text-center">Generos</h2>
             <div class="container-fluid">
                 <ul class="generos row list-unstyled">
@@ -88,13 +88,17 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        </main>
+    </section>
+    </main>
     <footer>
-        <a href="https://www.Twitter.com" target="_blank"><img src="../assets/twitterlogo.png" alt="twitter logo"></a>
-        <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebooklogo.png" alt="facebook logo"></a>
-        <a href="https://www.youtube.com" target="_blank"><img src="../assets/youtubelogo.png" alt="youtube logo"></a>
-        <p>Todos los derechos reservados &copy; 2024</p>
+        <div class=" iconos-footer d-flex justify-content-center">
+            <a href="https://www.Twitter.com" target="_blank"><img src="../assets/twitterlogo.png" alt="twitter logo"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebooklogo.png" alt="facebook logo"></a>
+            <a href="https://www.youtube.com" target="_blank"><img src="../assets/youtubelogo.png" alt="youtube logo"></a>
+        </div>
+        <div class="d-flex justify-content-center">
+            <p>Todos los derechos reservados &copy; 2024</p>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
