--- a/pages/mas_vistos.html
+++ b/pages/mas_vistos.html
@@ -63,7 +63,7 @@
             </section>
             <section>
                 <h3 class="h3-titulos text-center">Mes</h3>
-                <ul class="d-flex flex-wrap justify-content-center list-unstyled">"
+                <ul class="d-flex flex-wrap justify-content-center list-unstyled">
                     <li class="d-flex flex-wrap justify-content-center">
                         <img class="rounded" src="../assets/xmen.png" alt="libro xmen">
                         <p>X-Men: Heir of Apocalypse sigue a un grupo de mutantes que se enfrentan a una nueva amenaza cuando el temido villano Apocalipsis regresa con un heredero que busca imponer su dominio. La historia combina acción intensa y desafíos épicos mientras los X-Men luchan para proteger el mundo de una inminente catástrofe.</p>
@@ -106,10 +106,14 @@
         </div>
     </main>    
     <footer>
-        <a href="https://www.Twitter.com" target="_blank"><img src="../assets/twitterlogo.png" alt="twitter logo"></a>
-        <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebooklogo.png" alt="facebook logo"></a>
-        <a href="https://www.youtube.com" target="_blank"><img src="../assets/youtubelogo.png" alt="youtube logo"></a>
-        <p>Todos los derechos reservados &copy; 2024</p>
+        <div class=" iconos-footer d-flex justify-content-center">
+            <a href="https://www.Twitter.com" target="_blank"><img src="../assets/twitterlogo.png" alt="twitter logo"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebooklogo.png" alt="facebook logo"></a>
+            <a href="https://www.youtube.com" target="_blank"><img src="../assets/youtubelogo.png" alt="youtube logo"></a>
+        </div>
+        <div class="d-flex justify-content-center">
+            <p>Todos los derechos reservados &copy; 2024</p>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
