--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -44,19 +44,19 @@
                 <ul class="d-flex flex-wrap justify-content-center list-unstyled">
                     <li class="d-flex flex-wrap justify-content-center">
                         <img class="rounded" src="../assets/libronegro.jpg" alt="Próximo lanzamiento 1">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, doloribus porro dolorum possimus error impedit dignissimos? Illum cumque expedita consequatur excepturi quos consequuntur architecto quas fugiat fugit. Corrupti, architecto earum!</p>
+                        <p>"El libro negro de las horas" es una novela de misterio escrita por Eva García Sáenz de Urturi, donde Unai López de Ayala, un experto en perfiles criminales, se enfrenta a un enigma del pasado relacionado con su madre desaparecida, enredado en una peligrosa búsqueda de un libro antiguo.</p>
                     </li>
                     <li class="d-flex flex-wrap justify-content-center">
                         <img class="rounded" src="../assets/chicadenieve.jpg" alt="Próximo lanzamiento 2">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, doloribus porro dolorum possimus error impedit dignissimos? Illum cumque expedita consequatur excepturi quos consequuntur architecto quas fugiat fugit. Corrupti, architecto earum!</p>
+                        <p>"La chica de nieve" es una novela de Javier Castillo que sigue la historia de la desaparición de una niña durante el desfile de Acción de Gracias en Nueva York, y la obsesiva investigación de una periodista que desentraña oscuros secretos en su búsqueda por la verdad.</p>
                     </li>
                     <li class="d-flex flex-wrap justify-content-center">
                         <img class="rounded" src="../assets/cronica.jpg" alt="Próximo lanzamiento 3">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, doloribus porro dolorum possimus error impedit dignissimos? Illum cumque expedita consequatur excepturi quos consequuntur architecto quas fugiat fugit. Corrupti, architecto earum!</p>
+                        <p>"Crónica de una muerte anunciada" es una novela de Gabriel García Márquez que narra, a través de un estilo periodístico, los eventos previos y posteriores al asesinato de Santiago Nasar en un pequeño pueblo, donde todos sabían que ocurriría, pero nadie logró impedirlo.</p>
                     </li>
                     <li class="d-flex flex-wrap justify-content-center">
                         <img class="rounded" src="../assets/eldesorden.jpg" alt="Próximo lanzamiento 4">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, doloribus porro dolorum possimus error impedit dignissimos? Illum cumque expedita consequatur excepturi quos consequuntur architecto quas fugiat fugit. Corrupti, architecto earum!</p>
+                        <p>"El desorden que dejas" es una novela de Carlos Montero que sigue a Raquel, una joven profesora que llega a un instituto en Galicia para sustituir a una docente fallecida en extrañas circunstancias, y pronto descubre oscuros secretos y amenazas que la arrastran a un peligroso juego psicológico.</p>
                     </li>
                 </ul>
             </section>
@@ -85,10 +85,14 @@
         </div>    
     </main>          
     <footer>
-        <a href="https://www.Twitter.com" target="_blank"><img src="../assets/twitterlogo.png" alt="twitter logo"></a>
-        <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebooklogo.png" alt="facebook logo"></a>
-        <a href="https://www.youtube.com" target="_blank"><img src="../assets/youtubelogo.png" alt="youtube logo"></a>
-        <p>Todos los derechos reservados &copy; 2024</p>
+        <div class=" iconos-footer d-flex justify-content-center">
+            <a href="https://www.Twitter.com" target="_blank"><img src="../assets/twitterlogo.png" alt="twitter logo"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebooklogo.png" alt="facebook logo"></a>
+            <a href="https://www.youtube.com" target="_blank"><img src="../assets/youtubelogo.png" alt="youtube logo"></a>
+        </div>
+        <div class="d-flex justify-content-center">
+            <p>Todos los derechos reservados &copy; 2024</p>
+        </div>
     </footer> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>  
 </body>
