grid responsive a noticias en novedades

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -63,19 +63,19 @@
         </div>
         <h2 class="h2-titulos text-center">Noticias Semanales</h2>
         <div class="section-novedades d-flex flex-column">
-            <section>
-                <ul class="d-flex flex-wrap justify-content-center list-unstyled">
-                    <li class="d-flex flex-column align-items-center">
+            <section class="container-fluid">
+                <ul class=" row list-unstyled">
+                    <li class="col-12 col-md-6 col-xl-4 d-flex flex-wrap justify-content-center">
                         <h3 class="text-center">Murió Leonard Riggio, quien forjó un imperio con Barnes & Noble</h3>
                         <img src="../assets/noticia1.jpg" alt="Noticia 1">
                         <p>Leonard Riggio, quien transformó la industria editorial al crear Barnes & Noble y se convirtió en el librero más poderoso de Estados Unidos antes de que su empresa fuera superada por el auge de Amazon, murió a los 83 años.</p>
                     </li>
-                    <li class="d-flex flex-column align-items-center">
-                        <h3 class="text-center">Julio Cortázar a los 110 años: una ruta con los mejores libros para entrar en su universo</h3>
+                    <li class="col-12 col-md-6 col-xl-4 d-flex flex-wrap justify-content-center">
+                        <h3 class="text-center">Julio Cortázar a los 110 años: Los mejores libros para entrar en su universo</h3>
                         <img src="../assets/noticia2.jpg" alt="Noticia 2">
                         <p>Nacido un 26 de agosto de 1914, el argentino fue un escritor con una obra muy particular y creativa. A veces densa, pero exquisitamente literaria, su narrativa sigue siendo un imperdible. En Culto lo recordamos con una guía breve para comenzar a leerlo sin fracasar en el intento.</p>
                     </li>
-                    <li class="d-flex flex-column align-items-center">
+                    <li class="col-12 col-md-6 col-xl-4 d-flex flex-wrap justify-content-center">
                         <h3 class="text-center">Los libros de la semana y el ranking de bestsellers de agosto</h3>
                         <img src="../assets/noticia3.jpg" alt="Noticia 3">
                         <p>Una novela norteamericana que llega con las mejores recomendaciones y un policial escrito por un experto. Además, los títulos más vendidos.</p>
